d4aab3f64 fix: Stock notification prevents add to cart on Firefox #5741 (#5746)

--- a/output.css
+++ b/output.css
@@ -11120,6 +11120,9 @@ cx-category-navigation {
     grid-row: 3/4;
     padding: 20% 20px 20px 20px;
   }
+  .ProductDetailsPageTemplate cx-page-slot.Summary cx-stock-notification:empty {
+    display: none;
+  }
 }
 .ProductDetailsPageTemplate cx-page-slot.AddToCart {
   max-width: 50%;
